--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,8 @@ configurations {
 }
 
 dependencies {
-    shade('engineer.carrot.warren:warren:0.0.1.25:all') { transitive = false }
+    shade('engineer.carrot.warren:warren:0.0.1.29:all') { transitive = false }
+    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.9'
 }
 
 group = "engineer.carrot.warren.thump"
