--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,15 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
-
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
 
@@ -24,28 +20,84 @@ repositories {
     }
 }
 
-apply plugin: 'forge'
+apply plugin: 'kotlin'
+apply plugin: 'net.minecraftforge.gradle.forge'
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.4'
+version = version_major + '.' + version_minor + '.' + version_patch
+group = "engineer.carrot.warren.thump"
+archivesBaseName = "Thump"
+
+if (System.getenv().BUILD_NUMBER != null) {//adds the build number to the end of the version string if on a build server
+    version += ".${System.getenv().BUILD_NUMBER}"
 }
 
-def loadProperties(propsFilename) {
-    def props = new Properties()
-    new File(propsFilename).withInputStream {
-        stream -> props.load(stream)
+// java version
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
+sourceSets {
+    main.kotlin.srcDirs += 'src/main/kotlin'
+    main.java.srcDirs += 'src/main/java'
+}
+
+task copyKotlinFiles(type: Copy) {
+    dependsOn 'sourceMainJava'
+
+    from('src/main/kotlin/')
+    into('build/sources/main/java/')
+}
+
+compileKotlin { dependsOn 'copyKotlinFiles'; source = file('build/sources/main/java') }
+
+configurations {
+    shade
+    compile.extendsFrom shade
+}
+
+dependencies {
+    shade "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    shade "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    shade('engineer.carrot.warren:warren:0.0.1.69:all') { transitive = false }
+    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.12'
+}
+
+minecraft {
+    version = minecraft_version + "-" + forge_version
+    runDir = "run"
+
+    replace '@VERSION@', project.version
+    replace '@KOTLIN@', kotlin_version
+
+    mappings = "snapshot_20160118"
+}
+
+reobf {
+    jar {
+        extraLines += [ 'PK: kotlin engineer/carrot/warren/thump/repack/kotlin' ]
+        extraLines += [ 'PK: org/jetbrains/annotations engineer/carrot/warren/thump/repack/org/jetbrains/annotations' ]
+        extraLines += [ 'PK: engineer/carrot/warren/warren engineer/carrot/warren/thump/repack/warren' ]
+        extraLines += [ 'PK: org/slf4j engineer/carrot/warren/thump/slf4j' ]
+    }
+}
+
+processResources {
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "version", project.version
+    inputs.property "minecraft_version", project.minecraft.version
+
+    // replace stuff in mcmod.info, nothing else
+    from(sourceSets.main.resources.srcDirs) {
+        include 'mcmod.info'
+
+        // replace version and minecraft_version
+        expand 'version': project.version, 'minecraft_version': project.minecraft.version
     }
 
-    return new ConfigSlurper().parse(props)
-}
-
-def config = loadProperties("build.properties")
-ext.keystore_config = null
-ext.keystore = null
-
-if (project.hasProperty("thump_keystore_dir")) {
-    ext.keystore_config = loadProperties(project.thump_keystore_dir + File.separator + "keystore.properties")
-    ext.keystore = project.thump_keystore_dir + File.separator + ext.keystore_config.key_store
+    // copy everything else, that's not the mcmod.info
+    from(sourceSets.main.resources.srcDirs) {
+        exclude 'mcmod.info'
+    }
 }
 
 def env = System.getenv()
@@ -58,77 +110,11 @@ ext.jenkinsManifest = manifest {
         attributes("Jenkins-Build": "false")
     }
 }
+
 // Get Git metadata (if in Jenkins)
 ext.gitManifest = manifest {
     if (env.GIT_BRANCH != null) {
         attributes("Git-Branch": env.GIT_BRANCH, "Git-Hash": env.GIT_COMMIT)
-    }
-}
-
-configurations {
-    shade
-    compile.extendsFrom shade
-}
-
-dependencies {
-    shade('engineer.carrot.warren:warren:0.0.1.68:all') { transitive = false }
-    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.12'
-}
-
-group = "engineer.carrot.warren.thump"
-version = config.mod_version
-archivesBaseName = "Thump"
-
-targetCompatibility = 1.7
-
-task buildInfo {
-    if (env.BUILD_NUMBER != null) {
-        ext.build_number = "${env.BUILD_NUMBER}"
-    } else {
-        def tag_cmd = "git rev-parse --short HEAD"
-        def tag_proc = tag_cmd.execute()
-        tag_proc.waitFor()
-
-        def branch_cmd = "git branch"
-        def branch_proc = branch_cmd.execute()
-        branch_proc.waitFor()
-
-        if (tag_proc.exitValue() == 0 && branch_proc.exitValue() == 0) {
-            ext.build_number = branch_proc.text.split(' ')[1].trim() + "-" + tag_proc.text.trim()
-        } else {
-            ext.build_number = "unknown"
-        }
-    }
-}
-
-minecraft {
-    version = config.minecraft_version + "-" + config.forge_version
-    runDir = 'run'
-
-    replaceIn "reference/Reference.java"
-
-    if (keystore_config != null)
-        replace "@FINGERPRINT@", keystore_config.key_sha1
-
-    replace "@VERSION@", "${config.minecraft_version}-${config.mod_version}.${project.buildInfo.build_number}"
-
-    srgExtra "PK: engineer/carrot/warren/warren engineer/carrot/warren/thump/repack/warren"
-    srgExtra "PK: org/slf4j engineer/carrot/warren/thump/slf4j"
-}
-
-version = "${config.minecraft_version}-${config.mod_version}.${project.buildInfo.build_number}"
-
-processResources {
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-        include 'version.properties'
-
-        expand 'version': project.version, 'build_number': project.buildInfo.build_number, 'mcversion': project.minecraft.version
-    }
-
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-        exclude 'version.properties'
     }
 }
 
@@ -146,34 +132,11 @@ jar {
     }
 }
 
+
 // Dev jars
 task deobfJar(type: Jar) {
     from sourceSets.main.output
     classifier = 'deobf'
-}
-
-// Add dev jars to master artifacts list
-artifacts {
-    archives deobfJar
-}
-
-// Sign release jar
-task signJar(dependsOn: 'reobf') {
-    inputs.file jar.getArchivePath()
-    outputs.file jar.getArchivePath()
-
-    onlyIf {
-        return keystore_config != null
-    }
-
-    doLast {
-        ant.signjar(jar: jar.getArchivePath(),
-                alias: keystore_config.key_alias,
-                keystore: keystore,
-                storepass: keystore_config.key_store_password,
-                keypass: keystore_config.key_alias_password,
-                destDir: jar.destinationDir)
-    }
 }
 
 // Maven deployment
@@ -181,6 +144,10 @@ apply plugin: 'maven'
 
 if (!project.hasProperty("DEPLOY_DIR")) {
     ext.DEPLOY_DIR = null
+}
+
+artifacts {
+    archives deobfJar
 }
 
 uploadArchives {
