--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 minecraft_version=1.7.10
 forge_version=10.13.4.1558-1.7.10
-kotlin_version=1.0.0-rc-1036
+kotlin_version=1.0.0
 
-version_major=0
-version_minor=3
-version_patch=backport
+version_major=2
+version_minor=1
+version_patch=0
