Forcefully load the Kotlin adapter to work around a 1.7.10 Forge bug

--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,8 @@ jar {
     // Merge Jenkins and Git manifests to form final manifest in final release jar
     manifest {
         from jenkinsManifest, gitManifest
+
+        attributes 'FMLCorePlugin': 'engineer.carrot.warren.thump.CorePlugin', 'FMLCorePluginContainsFMLMod': 'true'
     }
 }
 
