--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 minecraft_version=1.8.9
 forge_version=11.15.1.1722
-kotlin_version=1.0.0-rc-1036
+kotlin_version=1.0.0
 
 version_major=2
-version_minor=1
+version_minor=2
 version_patch=0
