--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-minecraft_version=1.8.9
-forge_version=11.15.1.1722
+minecraft_version=1.9
+forge_version=12.16.0.1767-1.9
 kotlin_version=1.0.0
 
 version_major=2
