--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 minecraft_version=1.9
-forge_version=12.16.0.1767-1.9
-kotlin_version=1.0.0
+forge_version=12.16.0.1859-1.9
+kotlin_version=1.0.1-2
 
 version_major=2
 version_minor=2
-version_patch=1
+version_patch=2
