--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,19 @@ buildscript {
 repositories {
     maven { // Hopper Maven repo
         name 'Hopper'
-        url "http://maven.hopper.bunnies.io/"
+        url "https://maven.hopper.bunnies.io/"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'idea'
+
+idea {
+    module {
+        downloadSources = true
+    }
+}
 
 version = minecraft_version + '-' + version_major + '.' + version_minor + '.' + version_patch
 group = "engineer.carrot.warren.thump"
@@ -38,6 +45,10 @@ targetCompatibility = 1.7
 sourceSets {
     main.kotlin.srcDirs += 'src/main/kotlin'
     main.java.srcDirs += 'src/main/java'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.13'
 }
 
 task copyKotlinFiles(type: Copy) {
@@ -57,7 +68,7 @@ configurations {
 dependencies {
     shade "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    shade('engineer.carrot.warren:warren:0.0.1.82:all') { transitive = false }
+    shade "engineer.carrot.warren.warren:Warren:$warren_version"
     compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.12'
 }
 
