--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 minecraft_version=1.9
-forge_version=12.16.0.1859-1.9
-kotlin_version=1.0.1-2
+forge_version=12.16.1.1887
+kotlin_version=1.0.2
+warren_version=0.2.0.60
 
-version_major=2
-version_minor=2
-version_patch=2
+version_major=3
+version_minor=0
+version_patch=0
