--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,7 @@ reobf {
         extraLines += [ 'PK: engineer/carrot/warren/warren engineer/carrot/warren/thump/repack/warren' ]
         extraLines += [ 'PK: org/slf4j engineer/carrot/warren/thump/slf4j' ]
         extraLines += [ 'PK: com/squareup engineer/carrot/warren/thump/repack/com/squareup' ]
+        extraLines += [ 'PK: okio engineer/carrot/warren/thump/repack/okio' ]
     }
 }
 
