--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-minecraft_version=1.9
-forge_version=12.16.1.1887
+minecraft_version=1.9.4
+forge_version=12.17.0.1910-1.9.4
 kotlin_version=1.0.2
 warren_version=1.0.0.137
 
