--- a/build.gradle
+++ b/build.gradle
@@ -159,8 +159,13 @@ if (!project.hasProperty("DEPLOY_DIR")) {
     ext.DEPLOY_DIR = null
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
 artifacts {
-    archives deobfJar
+    archives deobfJar, sourcesJar
 }
 
 uploadArchives {
