--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 minecraft_version=1.10.2
-forge_version=12.18.0.2006-1.10.0
-kotlin_version=1.0.3
+forge_version=12.18.1.2066
+kotlin_version=1.0.4-eap-62
 warren_version=1.0.0.137
+mcp_mappings=snapshot_20160518
 
 version_major=4
 version_minor=0
-version_patch=0
+version_patch=1
