Replace build.gradle with Kotlin Gradle build script 🎉

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,6 @@
-minecraft_version=1.10.2
-forge_version=12.18.1.2066
-kotlin_version=1.0.4-eap-62
-warren_version=1.0.0.137
-mcp_mappings=snapshot_20160518
-
-version_major=4
-version_minor=0
-version_patch=1
+minecraftVersion=1.10.2
+forgeVersion=12.18.1.2066
+kotlinVersion=1.0.4-eap-62
+warrenVersion=1.0.0.137
+mcpMappings=snapshot_20160518
+thumpVersion=4.1.0
