--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 minecraftVersion=1.10.2
-forgeVersion=12.18.1.2092
-kotlinVersion=1.0.4-eap-62
+forgeVersion=12.18.2.2120
 warrenVersion=1.1.0.165
 mcpMappings=snapshot_20160518
 thumpVersion=4.1.0
+kotlinVersion=1.1-M02
