--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Jan 25 08:02:12 GMT 2017
+#Sat Jan 28 10:52:32 GMT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://repo.gradle.org/gradle/dist-snapshots/gradle-script-kotlin-3.4-20170117200919+0000-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-bin.zip
