--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 minecraftVersion=1.10.2
 forgeVersion=12.18.2.2120
-warrenVersion=2.0.0.90
+warrenVersion=2.0.0.91
 mcpMappings=snapshot_20160518
 thumpVersion=4.3.0
-kotlinVersion=1.1-M04
+kotlinVersion=1.1.0
