--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 minecraftVersion=1.11.2
 forgeVersion=13.20.0.2201
-warrenVersion=2.0.0.90
+warrenVersion=2.0.0.91
 mcpMappings=snapshot_20161210
 thumpVersion=4.6.0
-kotlinVersion=1.1-M04
+kotlinVersion=1.1.0
