--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ forgeVersion=12.18.2.2120
 warrenVersion=2.0.1.4
 mcpMappings=snapshot_20160518
 thumpVersion=4.3.0
-kotlinVersion=1.1.0
+kotlinVersion=1.1.2-4
