--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-minecraftVersion=1.11.2
-forgeVersion=13.20.0.2296
+minecraftVersion=1.12
+forgeVersion=14.21.0.2327
 warrenVersion=2.0.1.4
-mcpMappings=snapshot_20170425
-thumpVersion=4.6.1
-kotlinVersion=1.1.1
+mcpMappings=snapshot_20170611
+thumpVersion=4.7.0
+kotlinVersion=1.1.2-3
